--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "1e860dcd-3caa-428a-aa00-fcff6b6f0d36",
       "metadata": {
         "id": "1e860dcd-3caa-428a-aa00-fcff6b6f0d36"
@@ -520,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "888dc2e8-f944-4ae8-aee2-fe4d7f8fa82b",
       "metadata": {
         "colab": {
@@ -887,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "colab": {
@@ -1379,14 +1379,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0280a870-a799-400e-bcf0-9da614a27fe7"
+        "outputId": "cc11d262-fd09-4159-9b73-ec784042be83"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
+      "source": [
+        "#si-date-check\n",
+        "import re\n",
+        "\n",
+        "def dateCheck(date):\n",
+        "  match = re.search(r'(0[1-9]|[12]\\d|3[01])-(0[1-9]|1[0-2])-\\d{4}', date)\n",
+        "  return bool(match)\n",
+        "\n",
+        "dateCheck(\"my date is 32-01-2018\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f944049-c423-4afb-ec2e-77a7b8f54d11",
+        "id": "Lx6y6vi8AhL_"
       },
       "outputs": [
         {
@@ -1397,7 +1430,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 33
         }
       ],
       "source": [
@@ -1405,11 +1438,12 @@
         "import re\n",
         "\n",
         "def dateCheck(date):\n",
-        "  match = re.search(r'[0-3][0-9]-[0-1][0-9]-\\d{4}', date)\n",
+        "  match = re.search(r'[0-3][0-9]-(0[1-9]|1[0-2])-\\b\\d{4}\\b', date)\n",
         "  return bool(match)\n",
         "\n",
-        "##dateCheck(\"my date is 14-12-1963\")\n"
-      ]
+        "dateCheck(\"my date is 31-01-2018\")\n"
+      ],
+      "id": "Lx6y6vi8AhL_"
     },
     {
       "cell_type": "markdown",
