--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -887,14 +887,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "outputId": "f964c114-d595-47ec-ed2c-eb0dc0c11de7"
+        "outputId": "69ffa7af-5181-4adf-ff53-6ed0461d6261"
       },
       "outputs": [
         {
@@ -907,8 +907,9 @@
       ],
       "source": [
         "#si-favorite\n",
+        "import re\n",
         "\n",
-        "input_string = \"My favorite number is 1.\" # an example of possible input\n",
+        "##input_string = \"My favorite number is 1.\" # an example of possible input\n",
         "\n",
         "##re.search(r\"\\d\", input_string)\n",
         "\n",
@@ -1379,14 +1380,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cc11d262-fd09-4159-9b73-ec784042be83"
+        "outputId": "631dec67-111d-4a21-ef96-e9748e7a71db"
       },
       "outputs": [
         {
@@ -1397,7 +1398,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 4
         }
       ],
       "source": [
@@ -1413,12 +1414,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1f944049-c423-4afb-ec2e-77a7b8f54d11",
+        "outputId": "9ca17e40-7ec8-4a28-c67e-fa7e08428d47",
         "id": "Lx6y6vi8AhL_"
       },
       "outputs": [
@@ -1430,18 +1431,16 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 5
         }
       ],
       "source": [
         "#si-date-check\n",
-        "import re\n",
+        "##import re\n",
         "\n",
-        "def dateCheck(date):\n",
-        "  match = re.search(r'[0-3][0-9]-(0[1-9]|1[0-2])-\\b\\d{4}\\b', date)\n",
-        "  return bool(match)\n",
-        "\n",
-        "dateCheck(\"my date is 31-01-2018\")\n"
+        "##def dateCheck(date):\n",
+        "  ##match = re.search(r'[0-3][0-9]-(0[1-9]|1[0-2])-\\b\\d{4}\\b', date)\n",
+        "  ####dateCheck(\"my date is 31-01-2018\")\n"
       ],
       "id": "Lx6y6vi8AhL_"
     },
