--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1409,7 +1409,7 @@
         "  match = re.search(r'(0[1-9]|[12]\\d|3[01])-(0[1-9]|1[0-2])-\\d{4}', date)\n",
         "  return bool(match)\n",
         "\n",
-        "dateCheck(\"my date is 32-01-2018\")\n"
+        "##dateCheck(\"my date is 32-01-2018\")\n"
       ]
     },
     {
