--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1380,14 +1380,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "631dec67-111d-4a21-ef96-e9748e7a71db"
+        "outputId": "5728529f-1436-4257-e504-0d4b50684109"
       },
       "outputs": [
         {
@@ -1398,7 +1398,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 10
         }
       ],
       "source": [
@@ -1406,10 +1406,10 @@
         "import re\n",
         "\n",
         "def dateCheck(date):\n",
-        "  match = re.search(r'(0[1-9]|[12]\\d|3[01])-(0[1-9]|1[0-2])-\\d{4}', date)\n",
+        "  match = re.search(r'(0[1-9]|[12]\\d|3[01])-(0[1-9]|1[0-2])-\\d{4}\\b', date)\n",
         "  return bool(match)\n",
         "\n",
-        "##dateCheck(\"my date is 32-01-2018\")\n"
+        "#dateCheck(\"my date is 01-01-2010a\")\n"
       ]
     },
     {
