--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1380,27 +1380,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 17,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
-        "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5728529f-1436-4257-e504-0d4b50684109"
+        "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-date-check\n",
         "import re\n",
@@ -1462,14 +1447,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
         "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
       },
       "outputs": [],
       "source": [
-        "#si-email-check"
+        "#si-email-check\n",
+        "import re\n",
+        "\n",
+        "def emailCheck(email):\n",
+        "  match = re.search(r'[\\w\\.]+@[\\w-]+\\.(com|edu|org)\\b', email)\n",
+        "  return bool(match)\n",
+        "\n",
+        "##emailCheck(\"stumptruck@happy2org\")\n"
       ]
     }
   ],
@@ -1492,7 +1484,10 @@
       "version": "3.9.13"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "a2b64bb8-1908-45dc-b184-04dbdf0b6e42"
+      ]
     }
   },
   "nbformat": 4,
