--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1447,21 +1447,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 35,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
-        "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
+        "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ac1d3ce2-c95e-4eef-c279-2ec60f3057d7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ],
       "source": [
         "#si-email-check\n",
         "import re\n",
         "\n",
         "def emailCheck(email):\n",
-        "  match = re.search(r'[\\w\\.]+@[\\w-]+\\.(com|edu|org)\\b', email)\n",
+        "  match = re.search(r'^[a-zA-Z0-9]+(?:\\.[a-zA-Z0-9]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\.)+(?:com|edu|org)$', email)\n",
         "  return bool(match)\n",
         "\n",
-        "##emailCheck(\"stumptruck@happy2org\")\n"
+        "##emailCheck(\"stumptruck@happy2.org\")\n"
       ]
     }
   ],
